--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <!-- Specifying font family generates error on Toast.makeText() call -->
+        <!-- <item name="android:fontFamily">sans-serif</item> -->
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -29,7 +30,8 @@
         <item name="android:background">@drawable/button_save</item>
         <item name="android:textColor">@color/colorButtonSaveText</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <!-- Specifying font family generates error on Toast.makeText() call -->
+        <!-- <item name="android:fontFamily">sans-serif</item> -->
         <item name="android:textSize">12dp</item>
     </style>
 
