--- a/app/src/main/res/layout/fragment_settings_camera_detail.xml
+++ b/app/src/main/res/layout/fragment_settings_camera_detail.xml
@@ -1,143 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- fragment_settings_name_detail.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Node Details -->
-    <LinearLayout
+    <!-- Scroll list -->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@+id/layout_buttons">
+        android:layout_height="wrap_content"
+        android:scrollIndicators="none|right"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbars="vertical">
 
-        <!-- Scroll list -->
-        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        <!-- Node Details -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollIndicators="none|right"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbars="vertical">
+            android:orientation="vertical"
+            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+            android:paddingBottom="10dp">
 
-            <!-- Node Details -->
-            <LinearLayout
+            <TextView
+                style="@style/PreferenceCategoryTitleTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-                android:paddingRight="?android:attr/listPreferredItemPaddingRight"
-                android:paddingBottom="10dp">
+                android:layout_marginTop="40dp"
+                android:text="@string/lbl_camera_details"
+                tools:ignore="PrivateResource" />
 
-                <TextView
-                    android:id="@+id/lbl_camera_details"
-                    style="@style/PreferenceCategoryTitleTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:text="@string/lbl_camera_details" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:labelFor="@id/txt_camera_name"
+                android:text="@string/lbl_camera_name" />
 
-                <TextView
-                    android:id="@+id/lbl_camera_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:labelFor="@id/txt_camera_name"
-                    android:text="@string/lbl_camera_name" />
+            <EditText
+                android:id="@+id/txt_camera_name"
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/txt_camera_name"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:importantForAutofill="no" />
+            <TextView
+                android:id="@+id/lbl_camera_name_required_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lbl_required_field"
+                android:textColor="@color/design_default_color_error"
+                android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/lbl_camera_name_required_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/lbl_required_field"
-                    android:textColor="@color/design_default_color_error"
-                    android:visibility="gone" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:labelFor="@id/txt_camera_url"
+                android:text="@string/lbl_camera_url" />
 
-                <TextView
-                    android:id="@+id/lbl_camera_url"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:labelFor="@id/txt_camera_url"
-                    android:text="@string/lbl_camera_url" />
+            <EditText
+                android:id="@+id/txt_camera_url"
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textUri"
+                android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/txt_camera_url"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textUri"
-                    android:importantForAutofill="no" />
+            <TextView
+                android:id="@+id/lbl_camera_url_required_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/lbl_required_field"
+                android:textColor="@color/design_default_color_error"
+                android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/lbl_camera_url_required_field"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/lbl_required_field"
-                    android:textColor="@color/design_default_color_error"
-                    android:visibility="gone" />
+            <Switch
+                android:id="@+id/switch_use_authentication"
+                style="@style/PreferenceCategoryTitleTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/lbl_use_authentication"
+                tools:ignore="PrivateResource" />
 
-                <Switch
-                    android:id="@+id/switch_use_authentication"
-                    style="@style/PreferenceCategoryTitleTextStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/lbl_use_authentication" />
+            <TextView
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:labelFor="@id/txt_username"
+                android:text="@string/lbl_username" />
 
-                <TextView
-                    android:id="@+id/lbl_username"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:labelFor="@id/txt_username"
-                    android:text="@string/lbl_username" />
+            <EditText
+                android:id="@+id/txt_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/txt_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:labelFor="@id/txt_password"
+                android:text="@string/lbl_password" />
 
-                <TextView
-                    android:id="@+id/lbl_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:labelFor="@id/txt_password"
-                    android:text="@string/lbl_password" />
+            <EditText
+                android:id="@+id/txt_password"
+                style="@style/EditTextTheme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:importantForAutofill="no" />
 
-                <EditText
-                    android:id="@+id/txt_password"
-                    style="@style/EditTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="@string/lbl_required_field"
+                android:textColor="@color/design_default_color_error"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:text="@string/lbl_required_field"
-                    android:textColor="@color/design_default_color_error"
-                    android:textSize="12sp" />
+        </LinearLayout>
 
-            </LinearLayout>
-
-        </ScrollView>
-
-    </LinearLayout>
+    </ScrollView>
 
     <!-- Save/Cancel/Delete buttons -->
     <LinearLayout
@@ -149,16 +138,14 @@
         android:gravity="end"
         android:orientation="horizontal"
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-        android:paddingRight="?android:attr/listPreferredItemPaddingRight">
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" >
 
         <Button
             android:id="@+id/btn_cancel"
             style="@style/ButtonPrefCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:text="@string/btn_cancel" />
 
         <Button
