--- a/app/src/main/res/layout/drawer_view.xml
+++ b/app/src/main/res/layout/drawer_view.xml
@@ -14,6 +14,16 @@
 
         <include layout="@layout/toolbar" />
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="?android:attr/colorPrimary"
+            app:itemIconTint="@color/colorNavIcon"
+            app:itemTextColor="@color/colorNavText"
+            app:menu="@menu/navigation" />
+
     </RelativeLayout>
 
     <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
